chapter12/grpc/sample01/k8s/strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  selector:
    matchLabels:
      app: inventory
  mtls:
    mode: STRICT
