chapter12/grpc/sample01/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecomm-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: grpc
      protocol: https
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: ecomm-credential
    hosts:
    - "gateway.ecomm.com"
