chapter12/grpc/sample01/k8s/disable-mtls.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls
  namespace: istio-system
spec:
  host: inventory-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
