chapter12/grpc/sample01/k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment 
  labels:
    app: inventory 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: prabath/inventory.grpc.server
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
 type: ClusterIP
 selector:
  app: inventory
 ports:
 - name: grpc
   protocol: TCP
   port: 10443
   targetPort: 50051
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecomm-virtual-service
spec:
  hosts:
  - gateway.ecomm.com                                
  gateways:
  - ecomm-gateway.istio-system.svc.cluster.local    
  http:
  - match:
    - port: 443
    route:                                          
    - destination:
        host: inventory-service
        port:
          number: 10443
---
