chapter12/grpc/sample01/k8s/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: inventory-req-authn-policy
spec:
  selector:
    matchLabels:
      app: inventory
  jwtRules:
  - issuer: "sts.ecomm.com"
    audiences:
    - "*.ecomm.com"
    jwksUri: "https://raw.githubusercontent.com/microservices-security-in-action/samples/master/chapter12/sample04/jwtkey.jwk"
    jwtHeaders:
    - "Authorization" 
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: inventory-services-policy
spec:
 selector:
   matchLabels:
     app: inventory
 rules:
 - from:
   - source:
       requestPrincipals: ["*"]
